force-app/main/default/objects/Domestic_agency__c/Domestic_agency__c.object-meta.xml
<CustomObject>
    <description>国内陸送代行業者（唄）</description>
    <label>国内代行業者</label>
    <nameField>
        <label>国内代行業者タイトル</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>