force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_address2__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_address2__c</fullName>
    <label>以降住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>