force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_address__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_address__c</fullName>
    <label>市区町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>