force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_forklift__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_forklift__c</fullName>
    <label>フォークリフト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>