force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_forklift_claws_length__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_forklift_claws_length__c</fullName>
    <label>フォークリフト爪の長さ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1.6-1.9m</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>1.9-2.2m</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>アタッチメント装着で1.6-2.2または2.2以上</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>