force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_load_size__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_load_size__c</fullName>
    <label>積載車のサイズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>なし</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1台積み積載車</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2台積み積載車</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5台積み積載車</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6台積みトレーラー</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>