force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_others_precautions__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_others_precautions__c</fullName>
    <label>その他注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>