force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_postal_code__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_postal_code__c</fullName>
    <label>郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>