force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_tant_nm__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_tant_nm__c</fullName>
    <label>担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>