force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_tel_no__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_tel_no__c</fullName>
    <label>連絡先</label>
    <type>Phone</type>
</CustomField>