force-app/main/default/objects/Domestic_agency__c/fields/knai_daik_title_flg__c.field-meta.xml
<CustomField>
    <fullName>knai_daik_title_flg__c</fullName>
    <label>タイトルフラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>