force-app/main/default/objects/Domestic_agency__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>国内代行業者</relationshipLabel>
    <relationshipName>member_auction_Domestic_agency</relationshipName>
    <type>Lookup</type>
</CustomField>