force-app/main/default/objects/Domestic_agency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>knai_daik_title__c</columns>
    <columns>knai_daik_tant_nm__c</columns>
    <columns>knai_daik_tant_tel_no__c</columns>
    <columns>knai_daik_jp_local_cd__c</columns>
    <columns>knai_daik_postal_code__c</columns>
    <columns>knai_daik_address__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>